# pkg/server/server.swagger.json
@@ -31,6 +31,70 @@
     "application/json"
   ],
   "paths": {
+    "/api/v1/ai/capabilities/{pluginName}": {
+      "get": {
+        "operationId": "Runner_GetAICapabilities",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/serverAICapabilitiesResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "pluginName",
+            "description": "AI plugin name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "Runner"
+        ]
+      }
+    },
+    "/api/v1/ai/generate": {
+      "post": {
+        "summary": "AI plugin methods",
+        "operationId": "Runner_CallAI",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/serverAIResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/serverAIRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Runner"
+        ]
+      }
+    },
     "/api/v1/batchRun": {
       "post": {
         "operationId": "Runner_BatchRun",
@@ -443,6 +507,36 @@
     "/api/v1/extension/pages/{name}/js": {
       "get": {
         "operationId": "UIExtension_GetPageOfJS",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/serverCommonResult"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "UIExtension"
+        ]
+      }
+    },
+    "/api/v1/extension/pages/{name}/static": {
+      "get": {
+        "operationId": "UIExtension_GetPageOfStatic",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -1703,15 +1797,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "Value": {
-                  "type": "string"
-                },
-                "Description": {
-                  "type": "string"
-                }
-              }
+              "$ref": "#/definitions/RunnerUpdateSecretBody"
             }
           }
         ],
@@ -1737,6 +1823,20 @@
             }
           }
         },
+        "parameters": [
+          {
+            "name": "name",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "kind",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
         "tags": [
           "Runner"
         ]
@@ -1900,6 +2000,22 @@
             "type": "boolean"
           },
           {
+            "name": "kind.link",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "kind.categories",
+            "in": "query",
+            "required": false,
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "collectionFormat": "multi"
+          },
+          {
             "name": "ready",
             "in": "query",
             "required": false,
@@ -1950,43 +2066,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "owner": {
-                  "type": "string"
-                },
-                "description": {
-                  "type": "string"
-                },
-                "url": {
-                  "type": "string"
-                },
-                "username": {
-                  "type": "string"
-                },
-                "password": {
-                  "type": "string"
-                },
-                "properties": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "$ref": "#/definitions/serverPair"
-                  }
-                },
-                "kind": {
-                  "$ref": "#/definitions/serverStoreKind"
-                },
-                "ready": {
-                  "type": "boolean"
-                },
-                "readOnly": {
-                  "type": "boolean"
-                },
-                "disabled": {
-                  "type": "boolean"
-                }
-              }
+              "$ref": "#/definitions/RunnerUpdateStoreBody"
             }
           }
         ],
@@ -2231,25 +2311,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "api": {
-                  "type": "string"
-                },
-                "param": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "$ref": "#/definitions/serverPair"
-                  }
-                },
-                "spec": {
-                  "$ref": "#/definitions/serverAPISpec"
-                },
-                "proxy": {
-                  "$ref": "#/definitions/serverProxyConfig"
-                }
-              }
+              "$ref": "#/definitions/RunnerUpdateTestSuiteBody"
             }
           }
         ],
@@ -2378,15 +2440,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "targetSuiteName": {
-                  "type": "string"
-                },
-                "targetCaseName": {
-                  "type": "string"
-                }
-              }
+              "$ref": "#/definitions/RunnerDuplicateTestCaseBody"
             }
           }
         ],
@@ -2430,15 +2484,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "targetSuiteName": {
-                  "type": "string"
-                },
-                "targetCaseName": {
-                  "type": "string"
-                }
-              }
+              "$ref": "#/definitions/RunnerRenameTestCaseBody"
             }
           }
         ],
@@ -2476,12 +2522,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "targetSuiteName": {
-                  "type": "string"
-                }
-              }
+              "$ref": "#/definitions/RunnerDuplicateTestSuiteBody"
             }
           }
         ],
@@ -2519,12 +2560,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "targetSuiteName": {
-                  "type": "string"
-                }
-              }
+              "$ref": "#/definitions/RunnerRenameTestSuiteBody"
             }
           }
         ],
@@ -2562,12 +2598,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "data": {
-                  "$ref": "#/definitions/serverTestCase"
-                }
-              }
+              "$ref": "#/definitions/RunnerCreateTestCaseBody"
             }
           }
         ],
@@ -2611,26 +2642,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "data": {
-                  "type": "object",
-                  "properties": {
-                    "suiteName": {
-                      "type": "string"
-                    },
-                    "request": {
-                      "$ref": "#/definitions/serverRequest"
-                    },
-                    "response": {
-                      "$ref": "#/definitions/serverResponse"
-                    },
-                    "server": {
-                      "type": "string"
-                    }
-                  }
-                }
-              }
+              "$ref": "#/definitions/RunnerUpdateTestCaseBody"
             }
           }
         ],
@@ -2834,16 +2846,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "parameters": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "$ref": "#/definitions/serverPair"
-                  }
-                }
-              }
+              "$ref": "#/definitions/RunnerRunTestCaseBody"
             }
           }
         ],
@@ -2961,6 +2964,157 @@
     }
   },
   "definitions": {
+    "RunnerCreateTestCaseBody": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "$ref": "#/definitions/serverTestCase"
+        }
+      }
+    },
+    "RunnerDuplicateTestCaseBody": {
+      "type": "object",
+      "properties": {
+        "targetSuiteName": {
+          "type": "string"
+        },
+        "targetCaseName": {
+          "type": "string"
+        }
+      }
+    },
+    "RunnerDuplicateTestSuiteBody": {
+      "type": "object",
+      "properties": {
+        "targetSuiteName": {
+          "type": "string"
+        }
+      }
+    },
+    "RunnerRenameTestCaseBody": {
+      "type": "object",
+      "properties": {
+        "targetSuiteName": {
+          "type": "string"
+        },
+        "targetCaseName": {
+          "type": "string"
+        }
+      }
+    },
+    "RunnerRenameTestSuiteBody": {
+      "type": "object",
+      "properties": {
+        "targetSuiteName": {
+          "type": "string"
+        }
+      }
+    },
+    "RunnerRunTestCaseBody": {
+      "type": "object",
+      "properties": {
+        "parameters": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/serverPair"
+          }
+        }
+      }
+    },
+    "RunnerUpdateSecretBody": {
+      "type": "object",
+      "properties": {
+        "Value": {
+          "type": "string"
+        },
+        "Description": {
+          "type": "string"
+        }
+      }
+    },
+    "RunnerUpdateStoreBody": {
+      "type": "object",
+      "properties": {
+        "owner": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "url": {
+          "type": "string"
+        },
+        "username": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        },
+        "properties": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/serverPair"
+          }
+        },
+        "kind": {
+          "$ref": "#/definitions/serverStoreKind"
+        },
+        "ready": {
+          "type": "boolean"
+        },
+        "readOnly": {
+          "type": "boolean"
+        },
+        "disabled": {
+          "type": "boolean"
+        }
+      }
+    },
+    "RunnerUpdateTestCaseBody": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "type": "object",
+          "properties": {
+            "suiteName": {
+              "type": "string"
+            },
+            "request": {
+              "$ref": "#/definitions/serverRequest"
+            },
+            "response": {
+              "$ref": "#/definitions/serverResponse"
+            },
+            "server": {
+              "type": "string"
+            }
+          }
+        }
+      }
+    },
+    "RunnerUpdateTestSuiteBody": {
+      "type": "object",
+      "properties": {
+        "api": {
+          "type": "string"
+        },
+        "param": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/serverPair"
+          }
+        },
+        "spec": {
+          "$ref": "#/definitions/serverAPISpec"
+        },
+        "proxy": {
+          "$ref": "#/definitions/serverProxyConfig"
+        }
+      }
+    },
     "protobufAny": {
       "type": "object",
       "properties": {
@@ -2986,6 +3140,84 @@
             "type": "object",
             "$ref": "#/definitions/protobufAny"
           }
+        }
+      }
+    },
+    "serverAICapabilitiesResponse": {
+      "type": "object",
+      "properties": {
+        "models": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "title": "Supported models"
+        },
+        "features": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "title": "Supported features"
+        },
+        "description": {
+          "type": "string",
+          "title": "Plugin description"
+        },
+        "version": {
+          "type": "string",
+          "title": "Plugin version"
+        },
+        "success": {
+          "type": "boolean",
+          "title": "Whether the call succeeded"
+        },
+        "error": {
+          "type": "string",
+          "title": "Error message if failed"
+        }
+      }
+    },
+    "serverAIRequest": {
+      "type": "object",
+      "properties": {
+        "pluginName": {
+          "type": "string",
+          "title": "AI plugin name"
+        },
+        "model": {
+          "type": "string",
+          "title": "Model identifier"
+        },
+        "prompt": {
+          "type": "string",
+          "title": "The prompt or instruction"
+        },
+        "config": {
+          "type": "string",
+          "title": "JSON configuration (optional)"
+        }
+      },
+      "title": "AI plugin messages"
+    },
+    "serverAIResponse": {
+      "type": "object",
+      "properties": {
+        "content": {
+          "type": "string",
+          "title": "Generated content"
+        },
+        "meta": {
+          "type": "string",
+          "title": "JSON metadata (optional)"
+        },
+        "success": {
+          "type": "boolean",
+          "title": "Whether the call succeeded"
+        },
+        "error": {
+          "type": "string",
+          "title": "Error message if failed"
         }
       }
     },
@@ -3348,6 +3580,10 @@
         },
         "icon": {
           "type": "string"
+        },
+        "version": {
+          "type": "integer",
+          "format": "int32"
         }
       }
     },
@@ -3375,6 +3611,18 @@
         "Port": {
           "type": "integer",
           "format": "int32"
+        },
+        "storeKind": {
+          "type": "string"
+        },
+        "storeLocalFile": {
+          "type": "string"
+        },
+        "storeURL": {
+          "type": "string"
+        },
+        "storeRemote": {
+          "type": "string"
         }
       }
     },
@@ -3667,6 +3915,57 @@
         },
         "enabled": {
           "type": "boolean"
+        },
+        "dependencies": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/serverStoreKindDependency"
+          }
+        },
+        "link": {
+          "type": "string"
+        },
+        "params": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/serverStoreKindParam"
+          }
+        },
+        "categories": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "serverStoreKindDependency": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        }
+      }
+    },
+    "serverStoreKindParam": {
+      "type": "object",
+      "properties": {
+        "key": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "defaultValue": {
+          "type": "string"
+        },
+        "enum": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
         }
       }
     },
